@@ -7,7 +7,7 @@ responses:
   ProblemResponse:
     description: a problem
     schema:
-      $ref: #/definitions/Problem
+      $ref: '#/definitions/Problem'
 definitions:
   Problem:
     description: A Problem Details object (RFC 7807)
@@ -37,3 +37,35 @@ definitions:
         type: string
         format: uri
         description: A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
+  InvalidParamProblem:
+    description: Problem details for invalid input parameter(s)
+    allOf:
+      - $ref: '#/definitions/Problem'
+      - type: object
+        properties:
+          invalidParams:
+            type: array
+            description: An array of parameter OpenAPI violations
+            items:
+              $ref: '#/definitions/InvalidParam'
+  InvalidParam:
+    type: object
+    properties:
+      in:
+        description: The location of the invalid parameter (cfr Swagger parameters)
+        type: string
+        enum:
+          - body
+          - path
+          - query
+          - header
+      name:
+        description: The name of the invalid parameter
+        type: string
+      reason:
+        description: A message explaining the violation
+        type: string
+      value:
+        description: The value of the erroneous parameter
+        # allow all types, as type is mandatory. Known issue: property is ignored when using swagger codegen (see #25)
+        type: [string, number, integer, boolean, array, object, 'null']
